# python-tksvg

./: .appveyor.yml  .gitmodules  CMakeLists.txt  pyproject.toml
.github/workflows/: wheels.yml
tksvg/: __init__.py
